--- a/index.css
+++ b/index.css
@@ -1,9 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Great+Vibes&family=Playfair+Display:ital@1&display=swap');
-.inner_card{
-    background-color: hsl(36, 100%, 99%);
+
+body{
     margin: 0%;
-  
+    padding: 2%;
+    background-color: hsl(36, 100%, 99%);
+    overflow-x: hidden;
 }
+
 
 
 .navigation{
@@ -11,8 +14,12 @@
     display: flex;
     justify-content: space-between;
     width: 70vw;
-    margin: 1% auto 0%;
+    min-width: 40pc;
+    margin: 0% auto 1%;
     height: 10vh;
+}
+.menu{
+    display: none;
 }
 .navigation_ul{
    
@@ -36,11 +43,13 @@
     margin: 0% 0%;
     font-size: 50px;
     font-weight: 800;
+    color: hsl(240, 100%, 4%);
    
 }
 
 .container{
     width: 70vw;
+    min-width: 40pc;
     margin: 0% auto 0%;
    
     display: flex;
@@ -51,17 +60,19 @@
     height: 40vh;
 }
 .hero_below{
-    display: flex;
+    display: grid;
+    grid-template-columns: 50% 50%;
 }
 .hero_big{
-    width: 120%;
-    padding: 2%0%;
+   
+    min-width: fit-content;
+    padding: 2% 0%;
 }
 .hero_big_text{
     line-height: 1.5vh;
     
     padding: .5%;
-    font-size: 40px;
+    font-size: 30px;
     font-family: sans-serif;
     color: hsl(240, 100%, 5%);
 }
@@ -72,7 +83,7 @@
 }
 .hero_side_text{
     color: gray;
-    font-size: large;
+    font-size: medium;
     font-family: sans-serif;
 }
 .readmore{
@@ -87,39 +98,43 @@
 .righty{
     margin: 0% 2%;
     background-color: hsl(240, 100%, 4%);
-    padding: 0% 2%;
-    width: 50vw;
-    height: 63vh;
+    padding:3% 2% 0%;
+    width: 25vw;
+    min-width: 25vw;
+   
 }
 .r_head{
     color: rgb(229, 164, 0);
-    font-size: 40px;
+    font-size: 30px;
     font-family: sans-serif;
-    margin: 1% 0% 0%;
+    margin: 1% 5% 0%;
 }
 .r_inner{
-    padding: 2% 2% 2%;
-    margin: 1% 0% 3%;
+    padding: 2%;
+    margin: 1% 0% 7%;
     border-bottom: .5px solid white;
 }
 .r_inner_head{
     color: azure;
-    font-size: larger;
-    margin: 0%;
+    font-size: large;
+
+    margin: 2%;
     padding: 0%;
     font-family: sans-serif;
 }
 .r_inner_text{
-    color: azure;
+    color: rgb(164, 160, 160);
     font-family: sans-serif;
-    font-size: small;
+    font-size: medium;
+    margin: 1%;
 }
 .bottom{
    
     height: 10vh;
     width: 70vw;
+    min-width: 40pc;
     display: flex;
-    margin: 3% auto;
+    margin: 2% auto;
 
 }
 .img_bottom{
@@ -138,13 +153,138 @@
 .side_no{
     color: gray;
     margin: 0%;
+    font-family: sans-serif;
     line-height: 3px;
 }
 .side_head{
     font-size: large;
     color: hsl(240, 100%, 5%);
+    font-family: sans-serif;
 }
 .side_desc{
+    font-family: sans-serif;
     color: gray;
     font-size: small;
+}
+@media screen and (max-width:800px) {
+    body{
+        padding: 0%;
+        margin: 0%;
+    }
+    .menu{
+        display: inline;
+        margin: 3% 8%;
+        height: 15vh;
+    }
+    .navigation_ul{
+        display: none;
+    }
+    .navigation{
+        padding: 0% 2%;
+        width: 100vw;
+   
+     
+    }
+    .container{
+        width: 100vw;
+        padding: 0%;
+        
+        display: block;
+    }
+    .hero_img{
+        margin: 0%;
+        width: 100vw;
+        height: 50vh;
+    }
+    .hero_below{
+        display: block;
+  
+    }
+    .hero_big_text{
+        padding: 0% 4% 0% 0%;
+        font-size: 50px;
+        font-weight: 800;
+        
+    }
+    .hero_side_text{
+        color: gray;
+        font-size: large;
+        font-family: sans-serif;
+        padding: 2% 1%;
+
+    }
+    .readmore{
+        margin: 2% 1%;
+        width: 30vw;
+    }
+    .righty{
+        margin: 0% 0%;
+        background-color: hsl(240, 100%, 4%);
+        padding:5% 2% 0%;
+        width: 100vw;
+        min-width: 25vw;
+       
+    }
+    .r_head{
+        color: rgb(229, 164, 0);
+        font-size: 50px;
+        font-family: sans-serif;
+        margin: 1% 5% 0%;
+    }
+    .r_inner{
+        padding: 2%;
+        margin: 1% 0% 3%;
+        border-bottom: .5px solid white;
+    }
+    .r_inner_head{
+        color: azure;
+        font-size: larger;
+    
+        margin: 2%;
+        padding: 0%;
+        font-family: sans-serif;
+    }
+    .r_inner_text{
+        color: rgb(164, 160, 160);
+        font-family: sans-serif;
+        font-size: large;
+        margin: 1%;
+    }
+    .bottom{
+   
+        height: 10vh;
+        width: 100vw;
+        min-width: 40pc;
+        display: grid;
+        margin: 2% auto;
+    
+    }
+    .img_bottom{
+        width: 20vw;
+        height: 30vh;
+        
+    }
+    .side{
+        width: 80vw;
+        padding: 5%;
+    }
+    .bottom_cards{
+        display: flex;
+        width: 100vw;
+     
+        
+  
+    }
+    .side_no{
+        font-size: 50px;
+        margin: 1% 0% 5%;
+    }
+    .side_head{
+        font-size: xx-large;
+    }
+    .side_desc{
+        font-size: x-large;
+
+    }
+    
 }
